force-app/main/default/objects/tc9_pr__Leave_Template__c/tc9_pr__Leave_Template__c.object-meta.xml
<CustomObject>
    <label>Leave Template</label>
    <nameField>
        <label>Leave Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>