force-app/main/default/objects/tc9_pr__Leave_Template__c/fields/tc9_pr__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expiry_Date__c</fullName>
    <description>The latest date a Leave Template can be applied to a Payee record based on Payee Payroll Start Date</description>
    <inlineHelpText>The latest date a Leave Template can be applied to a Payee record based on Payee Payroll Start Date</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>