force-app/main/default/objects/tc9_pr__Leave_Template__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>Indicates the current status of the Leave Template record</description>
    <inlineHelpText>Indicates the current status of the Leave Template record</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>