force-app/main/default/objects/tc9_pr__Leave_Template__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Exclude_From_Auto_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>